# Photocatalytic-Parameter-Optimization

./: .gitignore  BOMo.py  LICENSE  README.md  input.xlsx  multi_objective_optimization.ipynb  option_1_pareto_optimal_solutions.xlsx  option_2_pareto_optimal_solutions.xlsx  option_3_pareto_optimal_solutions.xlsx  option_4_pareto_optimal_solutions.xlsx  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
