[project]
name = "photocatalytic-parameter-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "pymoo>=0.6.1.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
